test/force-app/main/default/objects/Depreciation_Breakdown__c/Depreciation_Breakdown__c.object-meta.xml
<CustomObject>
    <label>Depreciation Breakdown</label>
    <nameField>
        <label>Depreciation Breakdown Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Depreciation Breakdown</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>