test/force-app/main/default/objects/Depreciation_Breakdown__c/fields/Assumption_Set__c.field-meta.xml
<CustomField>
    <fullName>Assumption_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assumption Set</label>
    <referenceTo>Assumption_Set__c</referenceTo>
    <relationshipLabel>Depreciation Breakdown</relationshipLabel>
    <relationshipName>Depreciation_Breakdown</relationshipName>
    <type>Lookup</type>
</CustomField>