test/force-app/main/default/objects/Depreciation_Breakdown__c/fields/Non_Depreciable_Assets__c.field-meta.xml
<CustomField>
    <fullName>Non_Depreciable_Assets__c</fullName>
    <label>Non-Depreciable Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>