test/force-app/main/default/objects/Depreciation_Breakdown__c/fields/Total_Depreciation__c.field-meta.xml
<CustomField>
    <fullName>Total_Depreciation__c</fullName>
    <label>Total Depreciation</label>
    <summarizedField>Depreciation_Allocation__c.Allocation_Percentage__c</summarizedField>
    <summaryForeignKey>Depreciation_Allocation__c.Depreciation_Breakdown__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>